--- a/package.json
+++ b/package.json
@@ -1,13 +1,78 @@
 {
+	"private": true,
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "src/index.js",
 	"name": "@mathongo/design-system",
 	"description": "Design system for mathongo web application",
 	"repository": "https://github.com/Get-MARKS/design-system.git",
 	"author": "satyamskillz <satyamskillz@gmail.com>",
 	"license": "MIT",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"build": "tsc",
+		"test": "react-scripts test",
+		"start": "react-scripts start",
+		"eject": "react-scripts eject",
+		"build-storybook": "build-storybook",
+		"storybook": "start-storybook -p 6006"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		],
+		"overrides": [
+			{
+				"files": [
+					"**/*.stories.*"
+				],
+				"rules": {
+					"import/no-anonymous-default-export": "off"
+				}
+			}
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"peerDependencies": {
+		"react": "*",
+		"react-dom": "*"
+	},
+	"devDependencies": {
+		"@storybook/addon-actions": "^6.5.16",
+		"@storybook/addon-essentials": "^6.5.16",
+		"@storybook/addon-interactions": "^6.5.16",
+		"@storybook/addon-links": "^6.5.16",
+		"@storybook/builder-webpack5": "^6.5.16",
+		"@storybook/cli": "^6.5.16",
+		"@storybook/manager-webpack5": "^6.5.16",
+		"@storybook/node-logger": "^6.5.16",
+		"@storybook/preset-create-react-app": "^4.1.2",
+		"@storybook/react": "^6.5.16",
+		"@storybook/testing-library": "^0.0.13",
+		"babel-plugin-named-exports-order": "^0.0.2",
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^13.0.0",
+		"@testing-library/user-event": "^13.2.1",
+		"@types/jest": "^27.0.1",
+		"@types/node": "^16.7.13",
+		"@types/react": "^18.0.0",
+		"@types/react-dom": "^18.0.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"prop-types": "^15.8.1",
+		"react-scripts": "5.0.1",
+		"typescript": "^4.4.2",
+		"webpack": "^5.76.0"
 	},
 	"keywords": [
 		"mathongo",
