--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
 		"@storybook/preset-create-react-app": "^4.1.2",
 		"@storybook/react": "^6.5.16",
 		"@storybook/testing-library": "^0.0.13",
-		"babel-plugin-named-exports-order": "^0.0.2",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^13.0.0",
 		"@testing-library/user-event": "^13.2.1",
@@ -67,9 +66,10 @@
 		"@types/node": "^16.7.13",
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
+		"babel-plugin-named-exports-order": "^0.0.2",
+		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"prop-types": "^15.8.1",
 		"react-scripts": "5.0.1",
 		"typescript": "^4.4.2",
 		"webpack": "^5.76.0"
@@ -78,5 +78,8 @@
 		"mathongo",
 		"getmarks",
 		"system design"
-	]
+	],
+	"dependencies": {
+		"styled-components": "^5.3.8"
+	}
 }
