--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
 	"private": true,
+	"license": "MIT",
 	"version": "1.0.0",
-	"main": "library/index.js",
 	"name": "@mathongo/design-system",
 	"description": "Design system for mathongo web application",
 	"repository": "https://github.com/Get-MARKS/design-system.git",
 	"author": "satyamskillz <satyamskillz@gmail.com>",
-	"license": "MIT",
+	"types": "library/index.d.ts",
+	"main": "library/index.js",
+	"files": [
+		"library/**/*"
+	],
 	"scripts": {
 		"build": "tsc",
 		"test": "react-scripts test",
@@ -66,6 +70,7 @@
 		"@types/node": "^16.7.13",
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
+		"@types/styled-components": "^5.1.26",
 		"babel-plugin-named-exports-order": "^0.0.2",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
@@ -80,6 +85,6 @@
 		"system design"
 	],
 	"dependencies": {
-		"styled-components": "^5.3.8"
+		"styled-components": "^5.3.9"
 	}
 }
