--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "module": "esnext",
+    "module": "CommonJS",
     "jsx": "react-jsx",
     "outDir": "library",
     "declaration": true,
