--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,21 @@
 {
   "compilerOptions": {
+    // Default
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "strict": true,
-    "allowJs": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "module": "CommonJS",
-    "jsx": "react-jsx",
-    "outDir": "library",
+    "strict": true,
+    "skipLibCheck": true,
+
+    // Added
+    "jsx": "react",
+    "module": "ESNext",
     "declaration": true,
+    "declarationDir": "types",
     "sourceMap": true,
-    "declarationMap": true
-  },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "**/*.stories.tsx",
-    "**/*.test.tsx",
-    "**/*.test.ts",
-    "**/setupTest.ts"
-  ]
+    "outDir": "dist",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "emitDeclarationOnly": true
+  }
 }
