--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"html-webpack-plugin": "^5.5.0",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^28.1.3",
+		"jest-environment-jsdom": "^29.5.0",
 		"postcss": "^8.4.21",
 		"postcss-import": "^15.1.0",
 		"react": "^18.2.0",
