--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@babel/preset-react": "^7.16.0",
 		"@babel/preset-typescript": "^7.16.0",
 		"@mdx-js/react": "^2.1.2",
+		"@popperjs/core": "^2.11.7",
 		"@rollup/plugin-commonjs": "^21.0.1",
 		"@rollup/plugin-node-resolve": "^13.0.6",
 		"@rollup/plugin-typescript": "^8.3.0",
